--- a/css/eventbox.css
+++ b/css/eventbox.css
@@ -2,7 +2,7 @@
     margin: 10px 0;
     border-radius: 10px;
     overflow: hidden;
-    border: 1px solid #cccccccc;
+    border: 1px solid #ccccccaa;
 }
 
 .team-box-container {
