--- a/css/legacyteamlist.css
+++ b/css/legacyteamlist.css
@@ -2,7 +2,7 @@
     width: 100%;
     border-spacing: 0;
     margin: 20px 0;
-    border: 1px solid #cccccc;
+    border: 1px solid #ccccccaa;
     border-radius: 10px;
     overflow: hidden;
 }
