--- a/css/teammap.css
+++ b/css/teammap.css
@@ -122,7 +122,7 @@ body {
     font-size: 20px;
     background: none;
     color: var(--text-color);
-    border: 1px solid #cccccc50;
+    border: 1px solid #ccccccaa;
     border-radius: 5px;
     cursor: pointer;
     outline: none;
